# gl-playground2

./: gl-playground2.cabal  stack.yaml
triangle/: ImageLoader.hs  Main.hs  RenderLoop.hs  ShaderLoader.hs  Vertex.hs  triangle.frag  triangle.vert
