name:                gl-playground2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gl-playground2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable triangle
  hs-source-dirs:      triangle
  main-is:             Main.hs
  other-modules:       RenderLoop
                       ShaderLoader
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , GLFW-b
                     , linear
                     , OpenGL
                     , OpenGLRaw
  ghc-options:         -Wall
